syntax = "proto3";
package pb;

//1
message CsAccountLogin {
  uint32 RoleID = 1;
}

//2
message ScAccountLoginResult {
  uint32 Result = 1; // 1-成功 2-失败
}